<resources>
    <string name="app_name">MyFirstProject</string>
    <string name="text_back">Back</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movies_list">Movies list</string>
    <string name="runtime_text">%d min</string>
    <string name="reviews_quantity">%d Reviews</string>
    <string name="age_limit">%d+</string>
    <string name="cast">Cast</string>

    <string name="no_connection_yet">Соединение еще не установлено! Попробуйте еще раз!</string>
    <string name="no_connecting">Отсутствует интернет соединение!</string>
    <string name="retry">Retry</string>
    <string name="error_state">😨 Wooops %s</string>
    <string name="restart_text">Restart</string>
    <string name="cancel_text">Cancel</string>

    <string name="channel_new_movies">New movies</string>
    <string name="channel_new_movies_description">All new  highest rating movies.</string>

    <string name="film_high_rating">Фильм с высоким рейтингом!</string>

    <string name="shared_movie">movie_container</string>

    <string-array name="spinner_items">
        <item>popular</item>
        <item>rated</item>
        <item>upcoming</item>
    </string-array>
</resources>