<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/shared_movie"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_details_image_height"
            android:foreground="@drawable/vector_mask"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,UnusedAttribute" />

        <Button
            android:id="@+id/back_button"
            style="@style/Button.Back"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_6_8x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/minimum_age"
            android:layout_width="@dimen/space_3x"
            android:layout_height="@dimen/space_3x"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_17_5x"
            android:background="@drawable/vector_rectangle"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_1_5x"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            tools:text="@string/age_limit" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_1_5x"
            android:layout_marginEnd="@dimen/space_2x"
            android:singleLine="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_5x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minimum_age"
            tools:text="Avengers: End Game" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextCategory"
            android:textSize="@dimen/text_size_1_75x"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="Action, Adventure, Fantasy" />

        <com.aids61517.easyratingview.EasyRatingView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_0_5x"
            app:emptyDrawable="@drawable/vector_star_empty"
            app:fullDrawable="@drawable/vector_star_full"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/genres"
            app:numStars="5"
            app:spacing="@dimen/space_0_25x"
            app:step="0.1" />

        <TextView
            android:id="@+id/reviews_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:textAllCaps="true"
            android:textColor="@color/colorTextReview"
            android:textSize="@dimen/text_size_1_75x"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toTopOf="@+id/rating"
            tools:text="125 Reviews" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3_5x"
            android:text="@string/storyline"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_1_75x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/reviews_quantity" />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_0_5x"
            android:paddingBottom="@dimen/space_1_5x"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_1_75x"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/actor_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1_5x"
            android:text="@string/cast"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_1_75x"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/storyline_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1x"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/actor_title"
            tools:itemCount="5"
            tools:listitem="@layout/view_holder_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>